# castiron

./: .gitignore  README.md  data.txt  pyproject.toml
.github/workflows/: pages.yml  publish-pypi.yml
docs/: examples.js  gen_examples.py  index.html
docs/wheels/: cadbuildr_castiron-0.1.0-py3-none-any.whl  cadbuildr_ironstream-0.1.0-cp39-abi3-pyemscripten_2025_0_wasm32.whl
scripts/: run_doc_examples.py
src/castiron/: __init__.py  compiler.py  dag.py  dxf.py  loft.py  nodes.py  placement.py
tests/: test_compile.py
