[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadbuildr.castiron"
version = "0.1.0"
description = "castiron — compile a CADbuildr foundation DAG into geometry via the IronStream Python binding"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CADbuildr" }]

# The IronStream Python binding + the foundation library that produces the DAG.
dependencies = [
    "cadbuildr.ironstream",
    "cadbuildr-foundation",
    "svg.path",              # SVGShape path flattening
]

[project.optional-dependencies]
test = ["pytest"]
# Full SVGShape support: shapely resolves overlapping subpaths (2D union),
# matplotlib renders <text> elements to glyph outlines.
svg = ["shapely", "matplotlib"]

[tool.hatch.build.targets.wheel]
packages = ["src/castiron"]
